<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium_2"
        app:cardCornerRadius="@dimen/margin_small"
        app:cardElevation="@dimen/margin_medium">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_medium"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_meal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:contentDescription="@string/app_name"
                android:minHeight="120dp"
                android:scaleType="centerCrop"
                android:src="@drawable/meal" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3">

                <org.mmtextview.components.MMTextView
                    android:id="@+id/tv_meal_name"
                    android:layout_width="wrap_content"
                    android:layout_marginEnd="@dimen/margin_large"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:text="@string/dummy_name"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/text_regular_3x" />

                <org.mmtextview.components.MMTextView
                    android:id="@+id/tv_meal_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_meal_name"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:textSize="@dimen/text_regular"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:text="@string/dummy_category"
                    android:textColor="@color/secondary_text" />

                <org.mmtextview.components.MMTextView
                    android:id="@+id/tv_meal_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_meal_category"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_small"
                    android:textSize="@dimen/text_regular"
                    android:text="@string/dummy_price"
                    android:textColor="@color/primary_text" />

                <android.support.v7.widget.AppCompatRatingBar
                    android:id="@+id/rb_meal_rating"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_meal_price"
                    android:rating="3"
                    android:progressTint="@color/colorPrimary"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_medium_2"
                    android:isIndicator="true" />

                <TextView
                    android:id="@+id/tv_meal_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/tv_meal_price"
                    android:layout_marginEnd="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_medium_2"
                    android:text="@string/view_details"
                    android:textColor="@color/colorPrimary" />

            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/tv_meal_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium_2"
        android:layout_alignParentEnd="true"
        android:elevation="@dimen/margin_medium_2"
        android:background="@drawable/rating_point_bg"
        android:padding="@dimen/margin_medium_2"
        android:text="@string/dummy_rating"
        android:textColor="@android:color/white"
        tools:ignore="RelativeOverlap" />

</RelativeLayout>


